[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = ["Justas Zieminykas <justaxsz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
